--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "4.3.1",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
     "cocoon-js": "^0.0.5",
+    "coffee-loader": "^1.0.0",
+    "coffeescript": "^2.5.1",
     "gritter": "^1.7.4",
     "html5sortable": "^0.9.17",
     "jquery": "^3.5.1",
